correction qulques bugs sur Produit Fast food